[CREATE] Reserving slot logic
